# FitnessBot

./: .env.example  .gitignore  DATABASE_SETUP.md  README.md  pyproject.toml
src/: csv_file_handler.py  db.py  main.py  models.py  user_service.py  utils.py
