[tool.poetry]
name = "fitnessbot"
version = "0.1.0"
description = ""
authors = ["Vladyslav Ushakov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
